// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileGallery Component FileGallery renders and handles delete of error files 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        style="display: inline-block; width: 100%; overflow: hidden;"
      >
        <div
          class="item-container error"
        >
          <div
            class="left"
          >
            <div
              class="paperclip-icon"
            >
              <i
                class="icon"
                icon="fal,exclamation-triangle"
              />
            </div>
            <div
              class="name"
              data-testid="TEST-ID-download"
            >
              NAME
               (1.21 kB)
            </div>
          </div>
          <div
            class="right"
          >
            <div
              class="delete-icon"
              data-testid="TEST-ID-delete"
            >
              <i
                class="icon"
                icon="fal,trash-alt"
              />
            </div>
          </div>
        </div>
      </span>
      <div>
        <div
          class="gds-tooltip top"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            ERROR
          </div>
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <span
      style="display: inline-block; width: 100%; overflow: hidden;"
    >
      <div
        class="item-container error"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,exclamation-triangle"
            />
          </div>
          <div
            class="name"
            data-testid="TEST-ID-download"
          >
            NAME
             (1.21 kB)
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </span>
    <div>
      <div
        class="gds-tooltip top"
        style="left: -99999px; top: -99999px; opacity: 0;"
      >
        <div
          class="tooltip-arrow"
        />
        <div
          class="tooltip-label"
        >
          ERROR
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileGallery Component FileGallery renders and handles delete of uploading files 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            NAME
          </div>
        </div>
        <div
          class="right"
        >
          <progress
            class="progress"
            max="100"
            value="50"
          />
          <div
            class="delete-icon"
          >
            <i
              class="icon"
              icon="fal,spinner"
              spin="true"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="item-container"
    >
      <div
        class="left"
      >
        <div
          class="paperclip-icon"
        >
          <i
            class="icon"
            icon="fal,paperclip"
          />
        </div>
        <div
          class="name downloadable"
          data-testid="TEST-ID-download"
        >
          NAME
        </div>
      </div>
      <div
        class="right"
      >
        <progress
          class="progress"
          max="100"
          value="50"
        />
        <div
          class="delete-icon"
        >
          <i
            class="icon"
            icon="fal,spinner"
            spin="true"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileGallery Component FileGallery renders and handles download and delete of done files 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            NAME
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
            data-testid="TEST-ID-delete"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="item-container"
    >
      <div
        class="left"
      >
        <div
          class="paperclip-icon"
        >
          <i
            class="icon"
            icon="fal,paperclip"
          />
        </div>
        <div
          class="name downloadable"
          data-testid="TEST-ID-download"
        >
          NAME
        </div>
      </div>
      <div
        class="right"
      >
        <div
          class="delete-icon"
          data-testid="TEST-ID-delete"
        >
          <i
            class="icon"
            icon="fal,trash-alt"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileGallery Component FileGallery renders disabled deleting file 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name"
            data-testid="TEST-ID-download"
          >
            NAME
          </div>
        </div>
        <div
          class="right"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="item-container"
    >
      <div
        class="left"
      >
        <div
          class="paperclip-icon"
        >
          <i
            class="icon"
            icon="fal,paperclip"
          />
        </div>
        <div
          class="name"
          data-testid="TEST-ID-download"
        >
          NAME
        </div>
      </div>
      <div
        class="right"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileGallery Component FileGallery renders readonly of uploading file 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
            data-testid="TEST-ID-download"
          >
            NAME
          </div>
        </div>
        <div
          class="right"
        >
          <progress
            class="progress"
            max="100"
            value="50"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="item-container"
    >
      <div
        class="left"
      >
        <div
          class="paperclip-icon"
        >
          <i
            class="icon"
            icon="fal,paperclip"
          />
        </div>
        <div
          class="name downloadable"
          data-testid="TEST-ID-download"
        >
          NAME
        </div>
      </div>
      <div
        class="right"
      >
        <progress
          class="progress"
          max="100"
          value="50"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileGallery Component FileGallery renders without datatestid 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="item-container"
      >
        <div
          class="left"
        >
          <div
            class="paperclip-icon"
          >
            <i
              class="icon"
              icon="fal,paperclip"
            />
          </div>
          <div
            class="name downloadable"
          >
            NAME
          </div>
        </div>
        <div
          class="right"
        >
          <div
            class="delete-icon"
          >
            <i
              class="icon"
              icon="fal,trash-alt"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="item-container"
    >
      <div
        class="left"
      >
        <div
          class="paperclip-icon"
        >
          <i
            class="icon"
            icon="fal,paperclip"
          />
        </div>
        <div
          class="name downloadable"
        >
          NAME
        </div>
      </div>
      <div
        class="right"
      >
        <div
          class="delete-icon"
        >
          <i
            class="icon"
            icon="fal,trash-alt"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
